fixed wrong height value for settings-background-cover

--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ a:hover{
 	top: 0;
 	left: 0;
 	width: 100vw;
-	height: 100vw;
+	height: 100vh;
 	background-color: black;
 	opacity: 0.5;
 	z-index: 100;
